Fix module configuration